# INote-tauri

./: .gitignore  .prettierrc  CRYSTALLIZATION_REPORT.md  MIGRATION.md  README.md  WINDOW_MEMORY_IMPLEMENTATION_SUMMARY.md  WINDOW_MEMORY_TEST.md  _n0n_exec_1779480073293_wm27i7.cmd  biome.json  bunfig.toml  index.html  less.config.js  package-lock.json  package.json  start-dev.bat  tsconfig.json  vite.config.ts  窗口配置功能说明.html
.github/workflows/: build.yml
.roo/: mcp.json  system-prompt-code  system-prompt-code.bak
notes/: BUG.md  MIGRATION.md
public/css/: common.css
public/font/: iconfont.css  iconfont.js
src/: main.ts  shims-vue.d.ts  updater.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mutants.out/: lock.json  mutants.json  outcomes.json
src-tauri/mutants.out.old/: caught.txt  lock.json  outcomes.json  unviable.txt
src-tauri/mutants.out.old/diff/: src__window_config.rs_line_40_col_9.diff  src__window_config.rs_line_40_col_9_001.diff  src__window_config.rs_line_63_col_9.diff  src__window_config.rs_line_70_col_20.diff  src__window_config.rs_line_81_col_9.diff
src-tauri/src/: lib.rs  main.rs  window_config.rs  window_manager.rs
src/components/: ICopy.vue  IDropBar.vue  IHeader.vue  IInput.vue  IMessageBox.vue  ISwitch.vue  ITick.vue
src/components/IMessage/: index.css  index.ts
src/components/IRightClick/: index.css  (+1 more)
src/config/: electronConfig.ts  index.ts  inotesConfig.ts
src/less/: index.less  variables.less
src/router/: index.ts
src/service/: index.ts  tauriNoteService.ts  windowConfigService.ts  windowManager.ts
src/store/: notes.state.ts
src/types/: notes.d.ts
src/utils/: electronAdapter.ts  errorLog.ts  file.ts  index.ts
src/views/: main.vue
(+12 files in other folders)
